// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> matches snapshot when inhibited 1`] = `
"
<li class=\\"components-grid-alertgrid-alertgroup-alert list-group-item bg-transparent ps-1 pe-0 py-0 my-1 rounded-0 border-start-1 border-end-0 border-top-0 border-bottom-0 border-danger\\">
  <div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"angle-right\\"
            class=\\"svg-inline--fa fa-angle-right me-1 text-muted\\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 256 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            help:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            some long text
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"angle-left\\"
          class=\\"svg-inline--fa fa-angle-left me-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 256 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <span>
    <span
      class=\\"components-label components-label-with-hover px-1 me-1 badge bg-secondary cursor-pointer\\"
      data-toggle=\\"dropdown\\"
    >
      <svg
        aria-hidden=\\"true\\"
        focusable=\\"false\\"
        data-prefix=\\"fas\\"
        data-icon=\\"caret-down\\"
        class=\\"svg-inline--fa fa-caret-down pe-1\\"
        role=\\"img\\"
        xmlns=\\"http://www.w3.org/2000/svg\\"
        viewbox=\\"0 0 320 512\\"
        style=\\"width: 0.8rem;\\"
      >
        <path
          fill=\\"currentColor\\"
          d=\\"M310.6 246.6l-127.1 128C176.4 380.9 168.2 384 160 384s-16.38-3.125-22.63-9.375l-127.1-128C.2244 237.5-2.516 223.7 2.438 211.8S19.07 192 32 192h255.1c12.94 0 24.62 7.781 29.58 19.75S319.8 237.5 310.6 246.6z\\"
        >
        </path>
      </svg>
      1 day ago
    </span>
  </span>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"badge bg-light components-label components-label-with-hover cursor-pointer\\">
      <svg
        aria-hidden=\\"true\\"
        focusable=\\"false\\"
        data-prefix=\\"fas\\"
        data-icon=\\"volume-xmark\\"
        class=\\"svg-inline--fa fa-volume-xmark text-success\\"
        role=\\"img\\"
        xmlns=\\"http://www.w3.org/2000/svg\\"
        viewbox=\\"0 0 576 512\\"
      >
        <path
          fill=\\"currentColor\\"
          d=\\"M301.2 34.85c-11.5-5.188-25.02-3.122-34.44 5.253L131.8 160H48c-26.51 0-48 21.49-48 47.1v95.1c0 26.51 21.49 47.1 48 47.1h83.84l134.9 119.9c5.984 5.312 13.58 8.094 21.26 8.094c4.438 0 8.972-.9375 13.17-2.844c11.5-5.156 18.82-16.56 18.82-29.16V64C319.1 51.41 312.7 40 301.2 34.85zM513.9 255.1l47.03-47.03c9.375-9.375 9.375-24.56 0-33.94s-24.56-9.375-33.94 0L480 222.1L432.1 175c-9.375-9.375-24.56-9.375-33.94 0s-9.375 24.56 0 33.94l47.03 47.03l-47.03 47.03c-9.375 9.375-9.375 24.56 0 33.94c9.373 9.373 24.56 9.381 33.94 0L480 289.9l47.03 47.03c9.373 9.373 24.56 9.381 33.94 0c9.375-9.375 9.375-24.56 0-33.94L513.9 255.1z\\"
        >
        </path>
      </svg>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        job:
      </span>
      <span class=\\"components-label-value\\">
        node_exporter
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        cluster:
      </span>
      <span class=\\"components-label-value\\">
        dev
      </span>
    </span>
  </div>
  <a
    href=\\"http://localhost\\"
    target=\\"_blank\\"
    rel=\\"noopener noreferrer\\"
    class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
  >
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"up-right-from-square\\"
      class=\\"svg-inline--fa fa-up-right-from-square \\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 512 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z\\"
      >
      </path>
    </svg>
    link
  </a>
</li>
"
`;

exports[`<Alert /> matches snapshot with showAlertmanagers=false showReceiver=false 1`] = `
"
<li class=\\"components-grid-alertgrid-alertgroup-alert list-group-item bg-transparent ps-1 pe-0 py-0 my-1 rounded-0 border-start-1 border-end-0 border-top-0 border-bottom-0 border-danger\\">
  <div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"angle-right\\"
            class=\\"svg-inline--fa fa-angle-right me-1 text-muted\\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 256 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            help:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            some long text
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"angle-left\\"
          class=\\"svg-inline--fa fa-angle-left me-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 256 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <span>
    <span
      class=\\"components-label components-label-with-hover px-1 me-1 badge bg-secondary cursor-pointer\\"
      data-toggle=\\"dropdown\\"
    >
      <svg
        aria-hidden=\\"true\\"
        focusable=\\"false\\"
        data-prefix=\\"fas\\"
        data-icon=\\"caret-down\\"
        class=\\"svg-inline--fa fa-caret-down pe-1\\"
        role=\\"img\\"
        xmlns=\\"http://www.w3.org/2000/svg\\"
        viewbox=\\"0 0 320 512\\"
        style=\\"width: 0.8rem;\\"
      >
        <path
          fill=\\"currentColor\\"
          d=\\"M310.6 246.6l-127.1 128C176.4 380.9 168.2 384 160 384s-16.38-3.125-22.63-9.375l-127.1-128C.2244 237.5-2.516 223.7 2.438 211.8S19.07 192 32 192h255.1c12.94 0 24.62 7.781 29.58 19.75S319.8 237.5 310.6 246.6z\\"
        >
        </path>
      </svg>
      1 day ago
    </span>
  </span>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        job:
      </span>
      <span class=\\"components-label-value\\">
        node_exporter
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        cluster:
      </span>
      <span class=\\"components-label-value\\">
        dev
      </span>
    </span>
  </div>
  <a
    href=\\"http://localhost\\"
    target=\\"_blank\\"
    rel=\\"noopener noreferrer\\"
    class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
  >
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"up-right-from-square\\"
      class=\\"svg-inline--fa fa-up-right-from-square \\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 512 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z\\"
      >
      </path>
    </svg>
    link
  </a>
</li>
"
`;
